# myprotosql

./: .gitignore  README.md  myproto.sql  myproto_iter.sql  myproto_iter_signal.sql  myproto_iter_signal_def.sql  plugin.bat  protopy.py  pyproject.toml  remove_myproto.sql  requirements.txt  requirements_test.txt  setup.cfg
.github/workflows/: python-publish.yml  service-test.yml  test.yml  tests-mysql5_7.yml  tests-mysql8.yml  tests.yml
docker/: docker-compose.yml
proto/: binary_message.proto  enums.proto  everything.proto  extendable_message.proto  extension_message.proto  group.proto  imports_parentmessage.proto  imports_submessage.proto  maps.proto  oneof.proto  packages_imports_parentmessage.proto  packages_imports_submessage.proto  packages_submessage.proto  packed.proto  repeated_fields.proto  repeatedv3.proto  simple_message.proto  string_message.proto  submessage.proto  well_known_types.proto
src/myprotosql/: __init__.py  install_myproto.sql  myproto.sql  myprotosql.py  plugin.py  uninstall_myproto.sql
tests/: conftest.py  test_all_field_types.py  test_binary_message.py  test_enums.py  test_extensions.py  test_extensions_unverified.py  test_group.py  test_interpret_i32.py  test_interpret_i64.py  test_maps.py  test_messages_decode.py  test_messages_decode_raw.py  test_messages_decode_raw_to_jsonformat.py  test_messages_decode_raw_to_textformat.py  test_messages_decode_to_jsonformat.py  test_messages_decode_to_textformat.py  test_oneof.py  test_packages_imports.py  test_packed_repeated_fields.py  test_read_i32.py  test_read_i64.py  test_read_varint.py  test_repeated_fields.py  test_simple_message.py  test_string_escaping.py  test_string_message.py  test_submessage.py  test_well_known_types.py
