[metadata]
name = myprotosql
version = 0.0.1
author = Janick Reynders
description = Read proto binary data using pure mysql stored functions (protoc plugin)
license = GNU Lesser General Public License v3 or later (LGPLv3+)
license_files = COPYING COPYING.LESSER
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janickr/myprotosql
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    protoc
    protobuf
    mysql


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    protobuf>=5.27.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    protoc-gen-myprotosql = myprotosql:run_plugin
    protoc-gen-myprotosql-dump = myprotosql:dump_request
